Ajout rapport et ajout alimentation

--- a/src/main/resources/templates/ajout-rapport.html
+++ b/src/main/resources/templates/ajout-rapport.html
@@ -102,11 +102,11 @@
           <div class="row">
             <div class="col-lg-6">
               <label class="col-form-label">Nourriture:</label>
-              <input maxlength="50" type="text" class="form-control"/>
+              <input maxlength="50" type="text" class="form-control"th:field="*{alimentation.nourriturePropose}"/>
             </div>
             <div class="col-lg-6">
               <label class="col-form-label">Quantité:</label>
-              <input maxlength="50" type="text" class="form-control" />
+              <input maxlength="50" type="text" class="form-control"th:field="*{alimentation.quantite}" />
             </div>
           </div>
           <div class="row mt-5">
