--- a/src/main/resources/templates/visualisation-rapports.html
+++ b/src/main/resources/templates/visualisation-rapports.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
   <meta charset="utf-8">
@@ -157,6 +157,7 @@
 
   <!-- Main JS File -->
   <script th:src="@{/js/main.js}" src="../static/js/main.js"></script>
+  <script th:src="@{/js/datatable.js}" src="../static/js/datatable.js"></script>
 
 </body>
 
