--- a/src/main/resources/templates/gestion-habitats.html
+++ b/src/main/resources/templates/gestion-habitats.html
@@ -51,27 +51,49 @@
           <li><a class="nav-link" th:href="services" href="./services.html">Nos services</a></li>
           <li><a class="nav-link" th:href="habitats" href="./habitats.html">Nos habitats</a></li>
           <li><a class="nav-link" th:href="contact" href="./contact.html">Contact</a></li>
-          <li class="dropdown"><a href="#"><span>Espace administrateur</span> <i class="bi bi-chevron-down"></i></a>
+          <li sec:authorize="!isAuthenticated()">
+            <a class="nav-link" th:href="login" href="./login.html" >Se connecter</a>
+          </li>
+          <li sec:authorize="hasRole('ROLE_ADMINISTRATEUR')" class="dropdown"><a href="#"><span>Espace administrateur</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link" th:href="gestion-utilisateurs" href="./gestion-utilisateurs.html">Gestion
-                  des utilisateurs</a></li>
+                des utilisateurs</a></li>
               <li><a class="nav-link" th:href="gestion-services" href="./gestion-services.html">Gestion des services</a>
               </li>
-              <li><a class="nav-link active" th:href="gestion-habitats" href="./gestion-habitats.html">Gestion des
-                  habitats</a>
-              </li>
-              <li><a class="nav-link" th:href="gestion-races" href="./gestion-races.html">Gestion des races</a>
+              <li><a class="nav-link active" th:href="gestion-habitats" href="./gestion-habitats.html">Gestion des habitats</a>
               </li>
               <li><a class="nav-link" th:href="gestion-animaux" href="./gestion-animaux.html">Gestion des animaux</a>
+              </li>
+              <li><a class="nav-link" th:href="gestion-races" href="./gestion-races.html">Gestion des races</a>
               </li>
               <li><a class="nav-link" th:href="gestion-horaires" href="./gestion-horaires.html">Gestion des horaires</a>
               </li>
               <li><a class="nav-link" th:href="visualisation-rapports"
-                  href="./visualisation-rapports.html">Visualisation des rapports</a></li>
-              <li><a class="nav-link" th:href="vues-animaux" href="./vues-animaux.html">Vues animaux</a></li>
+                     href="./visualisation-rapports.html">Visualisation des rapports</a></li>
             </ul>
           </li>
-          <li><button class="btn">Se déconnecter</button></li>
+          <li sec:authorize="hasRole('ROLE_EMPLOYE')" class="dropdown"><a href="#"><span>Espace employé</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link" th:href="gestion-avis" href="./gestion-avis.html">Gestion
+                des avis</a></li>
+              <li><a class="nav-link" th:href="gestion-services" href="./gestion-services.html">Gestion des
+                services</a>
+              </li>
+              <li><a class="nav-link" th:href="ajout-alimentation" href="./ajout-alimentation.html">Ajout de
+                l'alimentation</a>
+              </li>
+            </ul>
+          </li>
+          <li sec:authorize="hasRole('ROLE_VETERINAIRE')" class="dropdown"><a href="#"><span>Espace vétérinaire</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link" th:href="ajout-rapport" href="./ajout-rapport.html">Ajout d'un rapport</a></li>
+              <li><a class="nav-link active" th:href="gestion-habitats" href="./gestion-habitats.html">Gestion des habitats</a>
+              </li>
+              <li><a class="nav-link" th:href="visualisation-alimentations" href="./visualisation-alimentations.html">Visualisation des alimentations</a>
+              </li>
+            </ul>
+          </li>
+          <li sec:authorize="isAuthenticated()"><form th:action="@{logout}" method="post"> <button class="btn">Se déconnecter</button></form></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -95,7 +117,7 @@
             </div>
             <div sec:authorize="hasRole('ROLE_ADMINISTRATEUR')" class="px-2">
               <button class="btn btn-primary custom-primary-button" data-bs-toggle="modal"
-                data-bs-target="#habitatModal">Ajouter un habitat</i>
+                      data-bs-target="#habitatModal">Ajouter un habitat</button>
             </div>
           </div>
           <div class="table-responsive">
@@ -169,9 +191,8 @@
     <div class="modal fade" th:each="habitat:${listeHabitat}"
          th:attr="id='modifierHabitatModal' + ${habitat.id}" tabindex="-1" aria-hidden="true">
       <div class="modal-dialog">
-        <div class="modal-content">
-          <form th:if="${#authorization.expression('hasRole(''ADMINISTRATEUR'')')}" action="#" th:action="@{'modifierHabitatModel/'+${habitat.id}}" method="post">
-            <form th:if="${#authorization.expression('hasRole(''VETERINAIRE'')')}" action="#" th:action="@{'modifierCommentaireModel/'+${habitat.id}}" method="post">
+        <div class="modal-content" sec:authorize="hasRole('ROLE_ADMINISTRATEUR')">
+          <form  action="#" th:action="@{'modifierHabitatModel/'+${habitat.id}}" method="post" >
             <div class="modal-header">
               <h5 class="modal-title">Habitat</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -179,13 +200,12 @@
             <div class="modal-body">
               <div class="mb-3">
                 <label class="col-form-label">Nom:</label>
-                <input  th:if="${#authorization.expression('hasRole(''ADMINISTRATEUR'')')}"maxlength="50" type="text" class="form-control" required th:name="nom" th:value="${habitat.nom}">
-                <input th:if="${#authorization.expression('hasRole(''VETERINAIRE'')')}" maxlength="50" type="text" class="form-control" required th:name="nom" th:value="${habitat.nom}">
+                <input maxlength="50" type="text" class="form-control" required th:name="nom" th:value="${habitat.nom}">
               </div>
               <div class="mb-3">
                 <label class="col-form-label">Description:</label>
-                <textarea  th:if="${#authorization.expression('hasRole(''ADMINISTRATEUR'')')}" maxlength="500" class="form-control" required th:name="description" th:text="${habitat.description}"></textarea>
-                <textarea th:if="${#authorization.expression('hasRole(''VETERINAIRE'')')}" maxlength="500" class="form-control" required th:name="description" th:text="${habitat.description}"></textarea>
+                <textarea maxlength="500" class="form-control" required th:name="description" th:text="${habitat.description}"></textarea>
+
               </div>
               <div class="mb-3">
                 <label class="col-form-label">Commentaire:</label>
@@ -197,6 +217,32 @@
               <button type="submit" class="btn btn-primary custom-primary-button">Envoyer</button>
             </div>
           </form>
+        </div>
+        <div class="modal-content" sec:authorize="hasRole('ROLE_VETERINAIRE')" >
+            <form sec:authorize="hasRole('ROLE_VETERINAIRE')" action="#" th:action="@{'modifierCommentaireModel/'+${habitat.id}}" method="post">
+              <div class="modal-header">
+                <h5 class="modal-title">Habitat</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="mb-3">
+                  <label class="col-form-label">Nom:</label>
+                  <input maxlength="50" type="text" class="form-control" required th:name="nom" th:value="${habitat.nom}" disabled>
+                </div>
+                <div class="mb-3">
+                  <label class="col-form-label">Description:</label>
+                  <textarea maxlength="500" class="form-control" required th:name="description" th:text="${habitat.description}" disabled></textarea>
+                </div>
+                <div class="mb-3">
+                  <label class="col-form-label">Commentaire:</label>
+                  <textarea maxlength="500" class="form-control" required th:name="commentaireHabitat" th:text="${habitat.commentaireHabitat}"></textarea>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                <button type="submit" class="btn btn-primary custom-primary-button">Envoyer</button>
+              </div>
+            </form>
         </div>
       </div>
     </div>
