--- a/src/main/resources/templates/habitats.html
+++ b/src/main/resources/templates/habitats.html
@@ -51,7 +51,49 @@
           <li><a class="nav-link" th:href="services" href="./services.html">Nos services</a></li>
           <li><a class="nav-link active" th:href="habitats" href="./habitats.html">Nos habitats</a></li>
           <li><a class="nav-link" th:href="contact" href="./contact.html">Contact</a></li>
-          <li><button class="btn" data-bs-toggle="modal" data-bs-target="#loginModal">Se connecter</button></li>
+          <li sec:authorize="!isAuthenticated()">
+            <a class="nav-link" th:href="login" href="./login.html" >Se connecter</a>
+          </li>
+          <li sec:authorize="hasRole('ROLE_ADMINISTRATEUR')" class="dropdown"><a href="#"><span>Espace administrateur</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link" th:href="gestion-utilisateurs" href="./gestion-utilisateurs.html">Gestion
+                des utilisateurs</a></li>
+              <li><a class="nav-link" th:href="gestion-services" href="./gestion-services.html">Gestion des services</a>
+              </li>
+              <li><a class="nav-link" th:href="gestion-habitats" href="./gestion-habitats.html">Gestion des habitats</a>
+              </li>
+              <li><a class="nav-link" th:href="gestion-animaux" href="./gestion-animaux.html">Gestion des animaux</a>
+              </li>
+              <li><a class="nav-link" th:href="gestion-races" href="./gestion-races.html">Gestion des races</a>
+              </li>
+              <li><a class="nav-link" th:href="gestion-horaires" href="./gestion-horaires.html">Gestion des horaires</a>
+              </li>
+              <li><a class="nav-link" th:href="visualisation-rapports"
+                     href="./visualisation-rapports.html">Visualisation des rapports</a></li>
+            </ul>
+          </li>
+          <li sec:authorize="hasRole('ROLE_EMPLOYE')" class="dropdown"><a href="#"><span>Espace employé</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link" th:href="gestion-avis" href="./gestion-avis.html">Gestion
+                des avis</a></li>
+              <li><a class="nav-link" th:href="gestion-services" href="./gestion-services.html">Gestion des
+                services</a>
+              </li>
+              <li><a class="nav-link" th:href="ajout-alimentation" href="./ajout-alimentation.html">Ajout de
+                l'alimentation</a>
+              </li>
+            </ul>
+          </li>
+          <li sec:authorize="hasRole('ROLE_VETERINAIRE')" class="dropdown"><a href="#"><span>Espace vétérinaire</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a class="nav-link" th:href="ajout-rapport" href="./ajout-rapport.html">Ajout d'un rapport</a></li>
+              <li><a class="nav-link" th:href="gestion-habitats" href="./gestion-habitats.html">Gestion des habitats</a>
+              </li>
+              <li><a class="nav-link" th:href="visualisation-alimentations" href="./visualisation-alimentations.html">Visualisation des alimentations</a>
+              </li>
+            </ul>
+          </li>
+          <li sec:authorize="isAuthenticated()"><form th:action="@{logout}" method="post"> <button class="btn">Se déconnecter</button></form></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -105,7 +147,7 @@
                   <td th:text="${animal.prenom}"><span>Pikachu</span></td>
                   <td th:text="${animal.race.label}"><span>Chien</span></td>
                   <td><span><button class="btn btn-primary custom-primary-button" data-bs-toggle="modal"
-                        data-bs-target="#animalModal"><i class="bi bi-eye"></i></button></span></td>
+                  th:attr="data-bs-target='#animalModal' + ${animal.id}"><i class="bi bi-eye"></i></button></span></td>
                 </tr>
               </tbody>
             </table>
@@ -117,7 +159,7 @@
     <!-- End habitats Sections -->
 
 
-    <div class="modal fade" tabindex="-1" th:each="animal:${listeAnimal}"  th:attr="id='#animalModal' + ${animal.id}">
+    <div class="modal fade" tabindex="-1" th:each="animal:${listeAnimal}"  th:attr="id='animalModal' + ${animal.id}">
       <div class="modal-dialog modal-xl">
         <div class="modal-content">
           <div class="modal-header">
@@ -134,7 +176,7 @@
                       <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide" th:each="animalImage :${animal.images}">
-                          <img th:src="@{'/image/' + ${animalImage.id}" alt="Image">
+                          <img th:src="@{'/image/' + ${animalImage.id}}" alt="Image">
                         </div>
 
                       </div>
@@ -144,11 +186,10 @@
 
                   <div class="col-lg-4">
                     <div class="info">
-                      <h3 class="border-custom">Habitat 1</a></h3>
+                      <h3 class="border-custom"  th:text="${animal.prenom}"></h3>
                       <ul>
-                        <li><strong>Prenom</strong>: Rondoudou</li>
-                        <li><strong>Race</strong>: Chat</li>
-                        <li><strong>Etat</strong>: Malade</li>
+                        <li th:text="${animal.race.label}"><strong>Race</strong>: Chat</li>
+                        <li th:text="${animal.etat}"><strong>Etat</strong>: Malade</li>
                       </ul>
                     </div>
                   </div>
