--- a/src/main/resources/templates/accueil.html
+++ b/src/main/resources/templates/accueil.html
@@ -112,7 +112,7 @@
 
       <div class="row">
         <div class="col-lg-6" data-aos="zoom-in">
-          <img th:src="@{/img/description1.jpg}" src="../static/img/description1.jpg" class="img-fluid" alt="">
+          <img th:src="@{/img/Description1.jpg}" src="../static/img/Description1.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 d-flex flex-column justify-contents-center" data-aos="fade-left">
           <div class="content pt-4 pt-lg-0">
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="col-lg-6" data-aos="zoom-in">
-          <img th:src="@{/img/description2.jpg}" src="../static/img/description2.jpg" class="img-fluid" alt="">
+          <img th:src="@{/img/Description2.jpg}" src="../static/img/Description2.jpg" class="img-fluid" alt="">
         </div>
       </div>
 
@@ -165,7 +165,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6" data-aos="zoom-in">
-          <img th:src="@{/img/services.jpg}" src="../static/img/services.jpg" class="img-fluid" alt="">
+          <img th:src="@{/img/Services.jpg}" src="../static/img/Services.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-6 d-flex flex-column justify-contents-center" data-aos="fade-left">
           <div class="content pt-4 pt-lg-0">
@@ -199,7 +199,7 @@
               </div>
             </div>
             <div class="col-lg-6" data-aos="zoom-in">
-                <img th:src="@{/img/description1.jpg}" src="../static/img/Description1.jpg" class="img-fluid" alt="">
+                <img th:src="@{/img/Description1.jpg}" src="../static/img/Description1.jpg" class="img-fluid" alt="">
             </div>
           </div>
   
