--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -138,6 +138,22 @@
       </div>
     </section><!-- End Contact Section -->
 
+    <div class="modal fade" id="successModal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" >Succès</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body align-items-center">
+
+            <h2> Votre demande a été envoyé </h2>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- End modal -->
   </main><!-- End #main -->
 
@@ -159,6 +175,18 @@
 
   <!-- Main JS File -->
   <script th:src="@{/js/main.js}" src="../static/js/main.js"></script>
+  <script type="text/javascript" th:inline="javascript"	>
+
+    window.onload = function () {
+        if([[${etat}]] === 'success'){
+            OpenBootstrapPopup();
+      }
+  };
+  function OpenBootstrapPopup() {
+      var myModal = new bootstrap.Modal(document.getElementById("successModal"), {});
+      myModal.show();
+  }
+  </script>
 
 </body>
 
